--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-  "cSpell.words": ["isfloat", "isgrade", "nmec", "validategrade"]
+  "cSpell.words": ["isfloat", "isgrade", "nmec", "validategrade"],
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    ".gitignore": true,
+    "node_modules": true,
+    ".eslintrc.json": true
+  },
+  "explorerExclude.backup": {}
 }
