--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
-    ".gitignore": true,
+    ".gitignore": false,
     ".eslintrc.json": true,
     "node_modules": true
   },
