--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "framer-motion": "^9.0.2",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/react-collapse": "^5.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
