--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/react-collapse": "^5.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwindcss": "^3.2.6"
   }
 }
